[#6890] Add CSS to prevent the issues from overflowing the container
Contributed by Peter Chester

--- a/assets/stylesheets/clocking_tool.css
+++ b/assets/stylesheets/clocking_tool.css
@@ -13,8 +13,8 @@ div.clocking-tool-inner .header .popout a { color: white; }
 div.clocking-tool-inner .header .popout a:hover { text-decoration: none; }
 div.clocking-tool-inner .form-container { float: left; margin: 0 5px;}
 div.clocking-tool-inner .issues-container {float: right; width: 50%; position: relative; top: -15px; }
-div.clocking-tool-inner .issues-container ul {padding-left: 0; list-style: none; background: #DDDDDD; }
-div.clocking-tool-inner .issues-container ul li { padding: 2px 0px; border-bottom: 1px solid #BBBBBB; white-space: nowrap; overflow-x: hidden; }
+div.clocking-tool-inner .issues-container ul {padding-left: 0; list-style: none; background: #DDDDDD; height: 206px; }
+div.clocking-tool-inner .issues-container ul li { padding: 2px 5px; border-bottom: 1px solid #BBBBBB; border-top: 1px solid #FFF; white-space: nowrap; overflow-x: hidden; }
 div.clocking-tool-inner select { width: 100%; }
 div.clocking-tool-inner .issue-fields, div.clocking-tool-inner .time_entry_comments { width: 100%; }
 div.clocking-tool-inner .time_entry_hours { font-size: 40px; text-align:center;float:left; }
